# ridge-detector

./: .gitignore  pyproject.toml
ridge_detector/: __init__.py  constants.py  correct.py  detector.py  generate_samples.py  gui.py  utils.py
tests/: test_gui.py  test_ridge_detector.py
